# myInterpreter

./: .gitignore  README.md  diff.txt  test.txt
project/: CMakeLists.txt
project/demo/: CMakeLists.txt
project/demo/boost_example/: CMakeLists.txt  StatementGrammar.cpp  boost_example.cpp
project/demo/lib_test/: CMakeLists.txt  CMakeLists.txt.orig  ExpressionEvaluatorTests.cpp  ExpressionGrammarDemo.cpp  LexarTests.cpp  LexerTests.cpp  ParserTests.cpp  StatementEvaluatorDemo.cpp  StatementGrammarDemo.cpp
project/demo/release/: CMakeLists.txt  IntrExecutor.cpp
project/includes/: Interpreter.hpp  Logger.hpp  functions.h
project/includes/ast/: ExpressionAST.hpp  Identifier.hpp  Identifire.hpp  Literal.hpp  StatementAST.hpp  ValueType.cpp
project/includes/ast/helper/: ExpressionASTPrinter.hpp  StatementASTPrinter.hpp
project/includes/evaluator/: ExpressionEvaluator.hpp  Printer.hpp  Regex.hpp  StatementEvaluator.hpp  VariableStack.hpp
project/includes/grammar/: ExpressionAST.hpp  ExpressionGrammar.hpp  LiteralGrammar.hpp  StatementGrammar.hpp
project/includes/grammar/helper/: ExpressionASTPrinter.hpp
project/includes/lexar/: Lexar.hpp
project/includes/lexer/: Helper.cpp  Helper.hpp  Lexer.hpp  Lexer.hpp.orig
project/includes/lexer/helper/: LexerIdGrammar.hpp
project/includes/parser/: Parser.hpp
project/src/: CMakeLists.txt  Interpreter.cpp
project/src/ast/: CMakeLists.txt  ExpressionAST.cpp  Identifier.cpp  Identifire.cpp  Literal.cpp  StatementAST.cpp
project/src/ast/helper/: ExpressionASTPrinter.cpp  StatementASTPrinter.cpp
project/src/evaluator/: CMakeLists.txt  ExpressionEvaluator.cpp  Printer.cpp  Regex.cpp  StatementEvaluator.cpp  VariableStack.cpp
project/src/grammar/: CMakeLists.txt  ExpressionAST.cpp  ExpressionGrammar.cpp  LiteralGrammar.cpp  StatementGrammar.cpp  StatementsGrammar.cpp
project/src/grammar/helper/: ExpressionASTPrinter.cpp
project/src/lexar/: CMakeLists.txt  Lexar.cpp
project/src/lexer/: CMakeLists.txt  Helper.cpp  Helper.hpp  Lexer.cpp  Lexer.cpp.orig
project/src/lexer/helper/: LexerIdGrammar.cpp  LexerIdToString.cpp
project/src/parser/: CMakeLists.txt  Parser.cpp
(+21 files in other folders)
